# ai-shodan-astra-vector-data

./: Dockerfile  MANIFEST.in  README.md  build_and_install.sh  pyproject.toml  requirements.txt  setup.py  shodan_mcp_server.py  shodan_to_qdrant.py
tests/test_embedding/: __init__.py
vector_and_llm/: __init__.py
vector_and_llm/lib/: __init__.py
vector_and_llm/lib/embedding/: __init__.py  base.py  ollama.py
vector_and_llm/lib/llm/: __init__.py  base.py  bedrock.py  ollama.py
vector_and_llm/lib/qdrant/: __init__.py  client.py  utils.py
vector_and_llm/tools/: llm_rag_shodan.py
